[gd_scene load_steps=5 format=3 uid="uid://coc4euox782dy"]

[ext_resource type="Script" path="res://components/dash/dash.gd" id="1_tbsx8"]
[ext_resource type="Texture2D" uid="uid://dsthct4lioaab" path="res://sprites/dust-trail-export.png" id="2_3b6jb"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u6io0"]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_itiwv"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[node name="Dash" type="Node2D"]
script = ExtResource("1_tbsx8")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DustTrail" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_u6io0")
emitting = false
process_material = SubResource("ParticleProcessMaterial_itiwv")
texture = ExtResource("2_3b6jb")
lifetime = 0.3
one_shot = true
draw_order = 2

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
